gammaray (2.2.0-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 12 Dec 2014 21:56:04 +0100

gammaray (2.1.0-4) unstable; urgency=medium

  [ Felix Geyer ]
  * Fix FTBFS on ppc64el (Closes: #765672).
  * Let xvfb-run choose a free server number so it doesn't fail when one is
    already taken.

  [ Jakub Adam ]
  * Drop build dependency on libqt4-private-dev (Closes: #763852)
    - gammaray is the last package still using it and has the needed Qt4 private
      headers already bundled with the source code. Dropping the dependency will
      allow libqt4-private-dev to be removed from Debian.
  * Bump Standards-Version to 3.9.6.

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 12 Dec 2014 21:28:26 +0100

gammaray (2.1.0-3.1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix FTBFS on mips64(el), as on mips* platform, they use the same
    e_machine value (Closes: #761805).

 -- YunQiang Su <syq@debian.org>  Thu, 09 Oct 2014 13:24:02 +0800

gammaray (2.1.0-3) unstable; urgency=medium

  * Team upload.

  [ Jakub Adam ]
  * Force 24-bit color depth to Xvfb
    - attempts to fix "Unsupported screen depth: 8" failures during
      the test runs on some architectures.

  [ Felix Geyer ]
  * Fix FTBFS on mips64 kernel, ppc64 and arm64.
  * Make testsuite non-fatal on kfreebsd due to bug #570805:
    Wrong path in /proc/pid/maps when bind mounted.
  * Run tests sequentially in the hope that it helps running them on
    architectures with low resources.

 -- Felix Geyer <fgeyer@debian.org>  Sun, 27 Jul 2014 17:22:50 +0200

gammaray (2.1.0-2) unstable; urgency=medium

  * Fix FTBFS on kFreeBSD, Hurd, mips, ppc, and s390x (Closes: #754986).

 -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 18 Jul 2014 18:26:51 +0200

gammaray (2.1.0-1) unstable; urgency=medium

  [ Felix Geyer ]
  * Call dh_auto_clean for both build directories.

  [ Jakub Adam ]
  * New upstream release.
  * Removed no longer needed use-empty-rpath.patch.