@@ -3,15 +3,15 @@ Date: Wed, 16 Jul 2014 15:27:00 +0200
 Subject: debian-archs-fix-build
 
 ---
- cmake/GammaRayProbeABI.cmake    | 18 ++++++++++++++++++
- common/probeabidetector_elf.cpp |  3 +++
- 2 files changed, 21 insertions(+)
+ cmake/GammaRayProbeABI.cmake    | 22 ++++++++++++++++++++++
+ common/probeabidetector_elf.cpp |  5 +++++
+ 2 files changed, 27 insertions(+)
 
 diff --git a/cmake/GammaRayProbeABI.cmake b/cmake/GammaRayProbeABI.cmake
-index e8519e9..5da6dee 100644
+index a7415d6..6fc7580 100644
 --- a/cmake/GammaRayProbeABI.cmake
 +++ b/cmake/GammaRayProbeABI.cmake
-@@ -56,10 +56,32 @@ elseif(APPLE)
+@@ -53,10 +53,32 @@ elseif(APPLE)
      set(GAMMARAY_PROBE_ABI "${GAMMARAY_PROBE_ABI}-${CMAKE_SYSTEM_PROCESSOR}")
    endif()
  
@@ -45,12 +45,12 @@ index e8519e9..5da6dee 100644
      set(GAMMARAY_PROBE_ABI "${GAMMARAY_PROBE_ABI}-${CMAKE_SYSTEM_PROCESSOR}")
    endif()
 diff --git a/common/probeabidetector_elf.cpp b/common/probeabidetector_elf.cpp
-index b35954c..af43eaf 100644
+index 03ba082..94f72e4 100644
 --- a/common/probeabidetector_elf.cpp
 +++ b/common/probeabidetector_elf.cpp
-@@ -151,6 +151,11 @@ static QString archFromELFHeader(const uchar *data, quint64 size)
-     case EM_386: return "i686";
+@@ -153,6 +153,11 @@ static QString archFromELFHeader(const uchar *data, quint64 size)
      case EM_X86_64: return "x86_64";
+ #endif
      case EM_ARM: return "arm";
 +    case EM_MIPS: return "mips";
 +    case EM_PPC: return "ppc";
