@@ -1,6 +1,7 @@
 gammaray (2.2.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refresh d/patches/debian-archs-fix-build.patch.
 
  -- Jakub Adam <jakub.adam@ktknet.cz>  Fri, 12 Dec 2014 21:56:04 +0100
 
